welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: ';' expected but 'else' found.
else if (getCouleurSol()==Color.green ){
^SlugTracking:16: error: expected class or object definition
recule()
^SlugTracking:18: error: expected class or object definition
return vert 
^SlugTracking:20: error: Unmatched closing brace '}' ignored here
}
^SlugTracking:24: error: eof expected but '}' found.
}
^