welcome.lessons.welcome.methods.slug.SlugTracking.scala.code

 def isFacingTrail():Boolean = {
 	
 var vert:Boolean=false 
 if (!estFaceMur)
 avance()

 }
else if (getCouleurSol()==Color.green ){
	
	vert=true
	
}else vert=false }

recule()

return vert 

}
